Fixed mobile view, other styling

--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 title: 404 - Page not found
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
+Unfortunately it seems this page either doesn't exist, or it was subpoenad by Robert Mueller so it's not here anymore. You can try again by going [back to the homepage]({{ site.baseurl }}/) if you'd like.
 
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="Constructocat by https://github.com/jasoncostello" style="width: 400px;"/>]({{ site.baseurl }}/)
